--- a/Alf_Ori_LM.Rmd
+++ b/Alf_Ori_LM.Rmd
@@ -12,24 +12,21 @@ knitr::opts_chunk$set(echo = TRUE)
 #remotes::install_github("RamiKrispin/forecastLM")
 library(tidyverse)
 library(forecastLM)
-library(tidyverse)
 library(data.table)
 library(lubridate)
-library(plotly)
-library(prophet)
 library(forecast)
 ```
 
 ```{r Import Alf Ori Date, echo=FALSE}
 rm(list=ls())
-AOri <-fread("/Users/Howe/Desktop/visALL.dat")
+AOri <-fread("../db/visALL.dat")
 AOri <- AOri %>% select(year,month,day,Vis)
 AOri$Cts <- ifelse(AOri$Vis==0.00,0,1)
 # Ori$Loess <-lowess(AOri$Vis,f=0.1)
 AOri$Ymd <- as.Date(paste(AOri$year, AOri$month, AOri$day, sep = "-")) 
 ```
 ```{r Calculate Daily Means}
- AOri1 <- AOri %>% select(Ymd,year,Vis) %>%
+ AOri1 <- AOri %>% select(Ymd,Vis) %>%
    group_by(Ymd) %>% summarise(Mean = mean(Vis),
                                Sum = sum(Vis),
                                Obs = n())
@@ -47,30 +44,22 @@ Description: Provides a forecasting framework based on linear regression model.
 
 ```{r forecastLM}
 colnames(AOri1) <- c("Ymd","Mean","Sum","Obs")
-Mag <- tsibble::as_tsibble(AOri1)
+Mag <- tsibble::as_tsibble(AOri1,index="Ymd")
 md <- trainLM(input = Mag,
-              y = "Sum",
+              y = "Mean",
               trend = list(linear = TRUE),
-#              seasonal = "yYmd",
+              seasonal = "week",
               lags = c(1, 12))
+```
 
 # Forecasting the future observations
+```{r}
 fc <- forecastLM(model = md,
-                 h = 1200)
+                 h = 1000)
 ```
 # Plotting the forecast output
 ```{r}
 plot_fc(fc)
-```
-```{r}
-#fcc <- fc$forecast$date
-fcc <- fc$forecast$Ymd
-fcc <- data.table::as.data.table(fcc)
-fcc$yhat <- fc$forecast$yhat
-colnames(fcc) <- c("Ymd","Yhat")
-fcc %>%filter(Ymd>="1964-01-01") %>%
-ggplot() + geom_line(aes(x=Ymd,y=Yhat)) +
-  ggtitle(" AOri Mag: 1964-2026")
 ```
 
 # Plotting the Fitted Values vs. Actuals
@@ -81,5 +70,23 @@ plot_fit(md)
 # Plotting the residuals
 ```{r}
 plot_res(md)
+```
+```{r}
+
+AOri$MA <- ma(AOri$Vis,order=60)
+A <- AOri %>% filter(Ymd >="2014-01-01")
+#fcc <- fc$forecast$date
+fcc <- fc$forecast$Ymd
+fcc <- data.table::as.data.table(fcc)
+fcc$yhat <- fc$forecast$yhat
+colnames(fcc) <- c("Ymd","Yhat")
+fcc %>%filter(Ymd>="2020-02-01") %>%
+ggplot() + geom_line(aes(x=Ymd,y=Yhat,col="Predicted")) + 
+  geom_line(data=A,aes(x=Ymd,y=MA,col="Visual")) +
+  labs(title=" Betelgeuse (Alf Orion) Magnitude Predctions",subtitle="Jan 1,2014- Nov. 12, 2022") + ylab("Visual Magnitude") +
+  scale_y_reverse()
+```
+```{r}
+
 ```
 
